# pybezier

./: .gitignore  CMakeLists.txt  setup.py  test2.py  test_sampling.py
include/: bezier.hpp  logging.hpp  utils.hpp  vec2.hpp
src/: bezier.cpp  bindings.cpp  utils.cpp  vec2.cpp
